[gd_scene load_steps=26 format=2]

[ext_resource path="res://Assets/Character Sprites/Mobs/Bat.png" type="Texture" id=1]
[ext_resource path="res://Assets/Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Mobs/Bat.gd" type="Script" id=3]
[ext_resource path="res://AI/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://AI/WandererController.tscn" type="PackedScene" id=5]
[ext_resource path="res://AI/PlayerDetection.tscn" type="PackedScene" id=6]
[ext_resource path="res://AI/SoftCollision.tscn" type="PackedScene" id=7]
[ext_resource path="res://AI/HitBox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/Stats.gd" type="Script" id=9]
[ext_resource path="res://UI/HealthBar.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Shaders/WhiteColor.shader" type="Shader" id=11]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 11 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "BatAnimation",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 3.91565

[sub_resource type="CapsuleShape2D" id=9]
radius = 3.51737
height = 8.8071

[sub_resource type="CircleShape2D" id=10]
radius = 36.7402

[sub_resource type="CircleShape2D" id=11]
radius = 3.37587

[sub_resource type="CircleShape2D" id=12]
radius = 3.78528

[sub_resource type="Animation" id=13]
resource_name = "Blink"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BatSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=14]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BatSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Bat" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 3 )

[node name="BatSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
scale = Vector2( 0.7, 0.7 )
frames = SubResource( 7 )
animation = "BatAnimation"
frame = 1
playing = true
offset = Vector2( 0, -12 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.7, 0.7 )
shape = SubResource( 8 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0.268581, -7.76658 )
shape = SubResource( 9 )

[node name="WandererController" parent="." instance=ExtResource( 5 )]
wander_range = 16

[node name="PlayerDetection" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetection" index="0"]
shape = SubResource( 10 )

[node name="SoftCollision" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 11 )

[node name="HitBox" parent="." instance=ExtResource( 8 )]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0.389769, -10.301 )
shape = SubResource( 12 )

[node name="Stats" type="Node" parent="."]
script = ExtResource( 9 )

[node name="HealthBar" parent="." instance=ExtResource( 10 )]
margin_left = -4.70137
margin_top = -18.0109
margin_right = -4.70137
margin_bottom = -18.0109

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Stop"
anims/Blink = SubResource( 13 )
anims/Stop = SubResource( 14 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="invincibility_ended" from="HurtBox" to="." method="_on_HurtBox_invincibility_ended"]
[connection signal="invincibility_started" from="HurtBox" to="." method="_on_HurtBox_invincibility_started"]
[connection signal="entered" from="PlayerDetection" to="." method="_on_PlayerDetection_entered"]
[connection signal="exited" from="PlayerDetection" to="." method="_on_PlayerDetection_exited"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="HurtBox"]
[editable path="PlayerDetection"]
[editable path="SoftCollision"]
[editable path="HitBox"]
